# ControleMotor_MQTT

./: CMakeLists.txt  README.md  main.c
